[workspace]
members = [
    "bobashare", # the backend
    "bobashare-admin", # admin CLI
    "bobashare-web", # backend webserver
]
resolver = "2"

[workspace.package]
version = "0.2.13"
authors = ["BBaoVanC <bbaovanc@bbaovanc.com>"]
edition = "2021"
description = "Simple ephemeral file sharing service"
homepage = "https://share.boba.best"
repository = "https://github.com/BBaoVanC/bobashare"
license = "MIT"
