[package]
name = "bobashare-admin"
version = "0.1.0"
authors = ["BBaoVanC <bbaovanc@bbaovanc.com>"]
edition = "2021"
description = "Simple ephemeral file sharing service"
repository = "https://github.com/BBaoVanC/bobashare"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bobashare = { version = "0.1.0", path = "../bobashare" }
chrono = "0.4.22"
clap = { version = "3.2.21", features = ["derive"] }
tokio = { version = "1.21.1", features = ["full"] }
tracing = "0.1.36"
