[package]
name = "bobashare-admin"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bobashare = { version = "0.1.0", path = "../bobashare" }
chrono = "0.4.22"
clap = { version = "4.0.8", features = ["derive"] }
mime_guess = "2.0.4"
tokio = { version = "1.23.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
