[package]
name = "bobashare-web"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
default-run = "bobashare-web"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
askama = "0.12.0"
axum = { version = "0.8.0", features = ["multipart"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
bobashare = { path = "../bobashare" }
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.12", features = ["derive"] }
config = "0.15.8"
displaydoc = "0.2.3"
envy = "0.4.2"
futures-util = "0.3.24"
headers = "0.4.0"
hex = "0.4.3"
humansize = "2.1.0"
hyper = "1.2.0"
mime = "0.3.16"
pulldown-cmark = "0.12.0"
rust-embed = { version = "8.0.0", features = ["mime-guess"] }
serde = "1.0.145"
serde-error = "0.1.2"
serde_json = "1.0.85"
syntect = { git = "https://github.com/trishume/syntect" }
thiserror = "1.0.35"
tokio = { version = "1.23.1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["io"] }
toml = "0.8.20"
tower = "0.5.0"
tower-http = { version = "0.6.0", features = ["trace", "request-id", "fs", "util"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
url = "2.3.1"
