[package]
name = "bobashare"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
mime = "0.3.16"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
snafu = "0.7.4"
tokio = { version = "1.23.1", features = ["full"] }
tracing = "0.1.36"

[dev-dependencies]
pretty_assertions = "1.3.0"
