[package]
name = "bobashare"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
displaydoc = "0.2.3"
mime = "0.3.16"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.35"
tokio = { version = "1.23.1", features = ["full"] }
tracing = "0.1.36"

[dev-dependencies]
expect-test = "1.5.0"
pretty_assertions = "1.3.0"
public-api = "0.43.0"
rustdoc-json = "0.9.2"
rustup-toolchain = "0.1.7"
